--- a/pkg/controller/node/BUILD
+++ b/pkg/controller/node/BUILD
@@ -46,6 +46,7 @@ go_library(
         "doc.go",
         "metrics.go",
         "node_controller.go",
+        "nodeconfigsourcepool.go",
     ],
     importpath = "k8s.io/kubernetes/pkg/controller/node",
     deps = [
@@ -54,6 +55,9 @@ go_library(
         "//pkg/controller:go_default_library",
         "//pkg/controller/node/ipam:go_default_library",
         "//pkg/controller/node/ipam/sync:go_default_library",
+        "//pkg/controller/node/nodeconfig/client-go/informers/externalversions/nodeconfig/v1alpha1:go_default_library",
+        "//pkg/controller/node/nodeconfig/client-go/listers/nodeconfig/v1alpha1:go_default_library",
+        "//pkg/controller/node/nodeconfig/v1alpha1:go_default_library",
         "//pkg/controller/node/scheduler:go_default_library",
         "//pkg/controller/node/util:go_default_library",
         "//pkg/util/metrics:go_default_library",
@@ -96,6 +100,11 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//pkg/controller/node/ipam:all-srcs",
+        "//pkg/controller/node/nodeconfig/client-go/clientset/versioned:all-srcs",
+        "//pkg/controller/node/nodeconfig/client-go/informers/externalversions:all-srcs",
+        "//pkg/controller/node/nodeconfig/client-go/listers/nodeconfig/v1alpha1:all-srcs",
+        "//pkg/controller/node/nodeconfig/scheme:all-srcs",
+        "//pkg/controller/node/nodeconfig/v1alpha1:all-srcs",
         "//pkg/controller/node/scheduler:all-srcs",
         "//pkg/controller/node/util:all-srcs",
     ],
