start hacking on the node controller (in a reaaaalllly hacky way)
Turned out I was hacking on the cloud controller manager, need the
existing node controller for this prototype. See branch
dkcfg-nodepool-crd.

--- a/examples/dkcfg-nodepool-crd/default-pool.yaml
+++ b/examples/dkcfg-nodepool-crd/default-pool.yaml
@@ -5,3 +5,5 @@ metadata:
 spec:
   percentNew: 0
 # history omitted for initial
+# TODO(mtaufen): probably useful to have a status here that includes the % actually on new
+# TODO(mtaufen): should have a way of "pushing" the local default onto the history... maybe just append nil?
