--- a/pkg/controller/node/nodeconfig/client-go/clientset/versioned/typed/nodeconfig/v1alpha1/BUILD
+++ b/pkg/controller/node/nodeconfig/client-go/clientset/versioned/typed/nodeconfig/v1alpha1/BUILD
@@ -13,6 +13,7 @@ go_library(
     deps = [
         "//pkg/controller/node/nodeconfig/client-go/clientset/versioned/scheme:go_default_library",
         "//pkg/controller/node/nodeconfig/v1alpha1:go_default_library",
+        "//vendor/github.com/golang/glog:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime/serializer:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
